Add new method getRandomAdvice
